--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,19 +20,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Setup Environment Variables
-        run: |
-          echo "VITE_NAVER_MAP_CLIENT_ID=$VITE_NAVER_MAP_CLIENT_ID
-          VITE_KAKAO_SDK_JS_KEY=$VITE_KAKAO_SDK_JS_KEY
-          VITE_SERVER_URL=$VITE_SERVER_URL
-          VITE_STATIC_ONLY=$VITE_STATIC_ONLY" >> .env
-        env:
-          VITE_NAVER_MAP_CLIENT_ID: ${{ secrets.VITE_NAVER_MAP_CLIENT_ID }}
-          VITE_KAKAO_SDK_JS_KEY: ${{ secrets.VITE_KAKAO_SDK_JS_KEY }}
-          VITE_SERVER_URL: ${{ vars.VITE_SERVER_URL }}
-          VITE_STATIC_ONLY: ${{ vars.VITE_STATIC_ONLY }}
+        uses: actions/checkout@v4
 
       - name: Use Node.js 22.x
         uses: actions/setup-node@v4
@@ -42,8 +30,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # ✅ 환경변수를 Vite 방식으로 안전하게 주입
       - name: Build
         run: npm run build
+        env:
+          VITE_NAVER_MAP_CLIENT_ID: ${{ secrets.VITE_NAVER_MAP_CLIENT_ID }}
+          VITE_KAKAO_SDK_JS_KEY: ${{ secrets.VITE_KAKAO_SDK_JS_KEY }}
+          VITE_SERVER_URL: ${{ vars.VITE_SERVER_URL }}
+          VITE_STATIC_ONLY: ${{ vars.VITE_STATIC_ONLY }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
