--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "homepage": "https://ohmypsc.github.io/260711-main",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,18 +15,27 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
-    "@types/node": "^24.0.15",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "dayjs": "^1.11.10",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.89.2",
-    "typescript": "^4.4.2",
-    "vite": "^7.0.4",
+    "typescript": "^5.4.5",
+    "vite": "^7.1.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-svgr": "^4.5.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@types/eslint": "^8",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.2",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "prettier": "^3.2.5",
+    "typescript-eslint": "^8.35.1"
   },
   "browserslist": {
     "production": [
@@ -38,14 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/eslint": "^8",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "prettier": "^3.2.5",
-    "typescript-eslint": "^8.35.1"
   }
 }
